@@ -19,10 +19,7 @@
  * *********************************************************************** */
 package org.matsim.contrib.socnetsim.jointtrips.router;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNotSame;
-import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.*;
 
 import java.util.Arrays;
 import java.util.Collection;
@@ -38,18 +35,21 @@ import org.matsim.api.core.v01.population.Person;
 import org.matsim.api.core.v01.population.Plan;
 import org.matsim.api.core.v01.population.PlanElement;
 import org.matsim.api.core.v01.population.PopulationFactory;
-import org.matsim.core.config.Config;
-import org.matsim.core.config.ConfigUtils;
-import org.matsim.core.population.PopulationUtils;
-import org.matsim.core.router.RoutingModule;
-import org.matsim.core.router.TripRouter;
-import org.matsim.core.router.TripStructureUtils;
-import org.matsim.core.scenario.ScenarioUtils;
-import org.matsim.facilities.Facility;
-
 import org.matsim.contrib.socnetsim.jointtrips.population.DriverRoute;
 import org.matsim.contrib.socnetsim.jointtrips.population.JointActingTypes;
 import org.matsim.contrib.socnetsim.jointtrips.population.PassengerRoute;
+import org.matsim.core.config.Config;
+import org.matsim.core.config.ConfigUtils;
+import org.matsim.core.population.PopulationUtils;
+import org.matsim.core.population.routes.NetworkRoute;
+import org.matsim.core.population.routes.RouteUtils;
+import org.matsim.core.router.RoutingModule;
+import org.matsim.core.router.RoutingRequest;
+import org.matsim.core.router.TripRouter;
+import org.matsim.core.router.TripStructureUtils;
+import org.matsim.core.scenario.ScenarioUtils;
+import org.matsim.core.utils.timing.TimeInterpretation;
+import org.matsim.facilities.Facility;
 
 /**
  * @author thibautd
@@ -66,7 +66,7 @@ public class JointPlanRouterTest {
 			new JointPlanRouter(
 					createTripRouter(
 						populationFactory, config),
-					null);
+					null, TimeInterpretation.create(config));
 
 		final Id<Link> linkId = Id.create( "some_link" , Link.class );
 		final Plan plan = populationFactory.createPlan();
@@ -100,6 +100,8 @@ public class JointPlanRouterTest {
 		final PassengerRoute newRoute = (PassengerRoute) leg.getRoute();
 		assertNotNull(
 				"new passenger route is null",
+
+
 				newRoute);
 
 		assertEquals(
@@ -119,7 +121,7 @@ public class JointPlanRouterTest {
 			new JointPlanRouter(
 					createTripRouter(
 						populationFactory, config),
-					null);
+					null, TimeInterpretation.create(config));
 
 		final Id<Link> linkId = Id.create( "some_link" , Link.class );
 		final Plan plan = populationFactory.createPlan();
@@ -180,12 +182,15 @@ public class JointPlanRouterTest {
 					new RoutingModule() {
 
 						@Override
-						public List<? extends PlanElement> calcRoute(
-								final Facility fromFacility,
-								final Facility toFacility,
-								final double departureTime,
-								final Person person) {
-							return Arrays.asList( PopulationUtils.createLeg(TransportMode.car) );
+						public List<? extends PlanElement> calcRoute(RoutingRequest request) {
+							final Facility fromFacility = request.getFromFacility();
+							final Facility toFacility = request.getToFacility();
+							
+							NetworkRoute route = RouteUtils.createNetworkRoute(List.of(fromFacility.getLinkId(), toFacility.getLinkId()), null);
+							route.setTravelTime(10);
+							Leg leg =  PopulationUtils.createLeg(TransportMode.car);
+							leg.setRoute(route);
+							return List.of(leg);
 						}
 
 					}));
