@@ -20,6 +20,10 @@
 
 package org.matsim.core.network;
 
+import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentMap;
+
 import org.apache.log4j.Logger;
 import org.matsim.api.core.v01.Coord;
 import org.matsim.api.core.v01.Id;
@@ -28,16 +32,7 @@ import org.matsim.api.core.v01.network.Link;
 import org.matsim.api.core.v01.network.Network;
 import org.matsim.api.core.v01.network.Node;
 import org.matsim.core.gbl.Gbl;
-import org.matsim.core.utils.misc.Time;
 import org.matsim.utils.objectattributes.attributable.Attributes;
-
-import java.io.IOException;
-import java.io.ObjectInputStream;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.Set;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ConcurrentMap;
 
 /*deliberately package*/ class LinkImpl implements Link {
 
@@ -49,19 +44,15 @@ import java.util.concurrent.ConcurrentMap;
 
 	private final Id<Link> id;
 
-	private Node from = null;
-	private Node to = null;
+	private Node from;
+	private Node to;
 
 	private double length = Double.NaN;
-	private double freespeed = Double.NaN;
-	private double capacity = Double.NaN;
-	private double nofLanes = Double.NaN;
+	private double freespeed;
+	private double capacity;
+	private double nofLanes;
 
-	private Set<String> allowedModes = HashSetCache.get(new HashSet<String>());
-
-//	private String type = null;
-
-//	private String origid = null;
+	private Set<String> allowedModes = DEFAULT_ALLOWED_MODES;
 
 	private final Network network;
 
@@ -69,19 +60,12 @@ import java.util.concurrent.ConcurrentMap;
 	private static int cpWarnCnt = 0 ;
 	private static int plWarnCnt = 0 ;
 	private static int lengthWarnCnt = 0;
-	private static int loopWarnCnt = 0 ;
 	private static final int maxFsWarnCnt = 1;
 	private static final int maxCpWarnCnt = 1;
 	private static final int maxPlWarnCnt = 1;
 	private static final int maxLengthWarnCnt = 1;
-	private static final int maxLoopWarnCnt = 1;
 
-	private static final Set<String> DEFAULT_ALLOWED_MODES;
-	static {
-		Set<String> set = new HashSet<>();
-		set.add(TransportMode.car);
-		DEFAULT_ALLOWED_MODES = HashSetCache.get(set);
-	}
+	private static final Set<String> DEFAULT_ALLOWED_MODES = HashSetCache.get(Set.of(TransportMode.car));
 
 	private final Attributes attributes = new Attributes();
 
@@ -90,7 +74,6 @@ import java.util.concurrent.ConcurrentMap;
 		this.network = network;
 		this.from = from;
 		this.to = to;
-		this.allowedModes = DEFAULT_ALLOWED_MODES;
 		this.setLength(length);
 		//for the eventual time variant attributes don't call the setter as it must be overwritten in TimeVariantLinkImpl
 		//and thus causes problems during object initialization, dg nov 2010
@@ -100,13 +83,7 @@ import java.util.concurrent.ConcurrentMap;
 		this.checkCapacitySemantics();
 		this.nofLanes = lanes;
 		this.checkNumberOfLanesSemantics();
-//		if (this.from.equals(this.to) && (loopWarnCnt < maxLoopWarnCnt)) {
-//			loopWarnCnt++ ;
-//			log.warn("fromNode=toNode=" + this.to + ": link is a loop");
-//			if ( loopWarnCnt == maxLoopWarnCnt )
-//				log.warn(Gbl.FUTURE_SUPPRESSED ) ;
-//		}
-		// loop links have become an acceptable thing for matsim.  kai, sep'19
+		// loop links have become an acceptable thing for matsim.  kai, sep'19. --> warnings turned off
 	}
 
 	private void checkCapacitySemantics() {
@@ -128,6 +105,7 @@ import java.util.concurrent.ConcurrentMap;
 	private void checkFreespeedSemantics() {
 		if ((this.freespeed <= 0.0) && (fsWarnCnt < maxFsWarnCnt) ) {
 			fsWarnCnt++ ;
+			log.warn("freespeed=" + this.freespeed + " of link id " + this.getId() +" may cause problems");
 			if ( fsWarnCnt == maxFsWarnCnt )
 				log.warn( Gbl.FUTURE_SUPPRESSED) ;
 		}
@@ -179,16 +157,6 @@ import java.util.concurrent.ConcurrentMap;
 		return true;
 	}
 
-//	/*deliberately package*/ final String getOrigId2() {
-//		// yyyyyy should now be possible to solve this with Attributable. kai, nov'16
-//		return this.origid ;
-//	}
-
-//	/*deliberately package*/ final String getType2() {
-//		// yyyyyy should now be possible to solve this with Attributable. kai, nov'16
-//		return this.type ;
-//	}
-	
 	// ---
 
 	@Override
@@ -207,17 +175,7 @@ import java.util.concurrent.ConcurrentMap;
 		return this.capacity;
 	}
 
-
-	@Override
-	public double getFlowCapacityPerSec() {
-		return getFlowCapacityPerSec(Time.getUndefinedTime());
-	}
-	@Override
-	public double getFlowCapacityPerSec(@SuppressWarnings("unused") final double time) {
-		return this.getCapacity(time) / network.getCapacityPeriod();
-	}
-	
-	double getCapacityPeriod() {
+	public double getCapacityPeriod() {
 		// since the link has a back pointer to network, we can as well provide this here (????)
 		// TimeVariantLinkImpl needs this ... but why?
 		return network.getCapacityPeriod() ;
@@ -228,7 +186,6 @@ import java.util.concurrent.ConcurrentMap;
 	@Override
 	public double getFreespeed() {
 		return this.freespeed;
-//		return getFreespeed(Time.UNDEFINED_TIME);
 	}
 
 	/**
@@ -262,7 +219,6 @@ import java.util.concurrent.ConcurrentMap;
 	@Override
 	public double getNumberOfLanes() {
 		return this.nofLanes;
-//		return this.getNumberOfLanes(Time.UNDEFINED_TIME);
 	}
 
 	@Override
@@ -286,16 +242,6 @@ import java.util.concurrent.ConcurrentMap;
 		this.allowedModes = HashSetCache.get(modes);
 	}
 
-//	/*deliberately package*/ final void setOrigId2(final String id) {
-//		this.origid = id;
-//	}
-	
-	private void readObject(ObjectInputStream ois) throws ClassNotFoundException, IOException {
-		ois.defaultReadObject();
-		this.from.addOutLink(this);
-		this.to.addInLink(this);
-	}
-
 	@Override
 	public String toString() {
 		return super.toString() +
@@ -307,9 +253,6 @@ import java.util.concurrent.ConcurrentMap;
 		"[capacity=" + this.capacity + "]" +
 		"[permlanes=" + this.nofLanes + "]" +
 		"[modes=" + this.allowedModes ;
-//		"[origid=" + this.origid + "]" + // not in api
-//		"[type=" + this.type + "]"; // not in api
-		// yyyyyy add the "free text" attributes
 	}
 
 	@Override
@@ -336,12 +279,7 @@ import java.util.concurrent.ConcurrentMap;
 			if (set == null) {
 				return null;
 			}
-			return cache.computeIfAbsent(set.hashCode(), key -> Collections.unmodifiableSet(set));
+			return cache.computeIfAbsent(set.hashCode(), key -> Set.copyOf(set));
 		}
 	}
-
-//	/*deliberately package*/ void setType2(String type2) {
-//		// yyyyyy should now be possible to solve this with Attributable. kai, nov'16
-//		this.type = type2 ;
-//	}
 }
